[tool.poetry]
name = "repl_python3_machine-learning"
version = "0.1.0"
description = ""
authors = ["Aayush Bhan>"]

[tool.poetry.dependencies]
python = "^3.8"
opencv-python = "^4.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
